# IMDB

./: GVMDF.pyproj  GVMDF.sln  README.md  manage.py
GVMDF/: __init__.py  settings.py  urls.py  wsgi.py
app/: models.py  process.py  serializers.py  utils.py  views.py
app/data/: .Rhistory  IBV.gff  hCoV-19.fasta  hCoV-19.tsv  hMPV.tsv  hMPV_ref.fasta  hRSVA.tsv  hRSVB.tsv
app/migrations/: 0001_initial.py  0002_species_sample_segment_sample_species.py  0003_remove_position_extra_extra_position.py  0004_alter_country_country.py  0005_species_annotation_species_refseq.py  0006_protein_species.py  0007_alter_protein_species.py  0008_alter_sample_time.py  0009_protein_id.py  0010_remove_position_protein_delete_protein.py  0011_protein_position_protein.py  0012_lineage_species.py  0013_alter_sample_time.py  0014_rename_sample_id_position_sample.py  0015_species_seglength.py  0016_protein_length.py  0017_protein_segment.py  0018_alter_extra_position_alter_position_protein_and_more.py  0019_alter_extra_id_alter_position_id.py  0020_alter_extra_position_alter_position_protein_and_more.py  0021_alter_extra_id_alter_position_id.py  0022_alter_extra_position_alter_position_protein_and_more.py  0023_protein_nested.py  0024_remove_protein_nested.py
app/templates/: homepage.html
primerDesign/: CMakeLists.txt
primerDesign/src/: comparators.h  mopso.h  pareto.h  primer_design.cpp  primer_design.h  probes.h  singleton.h  static_data.h  structs.h  thal.cpp  thal_parameters.cpp  thal_wrapper.h  thread_pool.h  utils.h
pysnp/: CMakeLists.txt  MPVProcess.h  pysnp.cpp
(+28 files in other folders)
